Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106241

Qt build from source failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.2.6
    • 6.3.1
    • WebEngine
    • None
    • Linux user-VirtualBox 5.15.0-46-generic #49-Ubuntu SMP Thu Aug 4 18:03:25 UTC 2022 x86_64 x86_64 x86_64 GNU/Linux
      gcc version 11.2.0
    • Linux/X11
    • 1791c97199 (qt/qtwebengine/6.3) 1791c97199 (qt/tqtc-qtwebengine/6.3) 1791c97199 (qt/tqtc-qtwebengine/6.2)

      In file included from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter_client.h:56,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.h:63,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.cpp:44:
      /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/profile_adapter.h:251:61: error: field ‘m_customUrlSchemeHandlers’ has incomplete type ‘QHash<QByteArray, QPointer<QWebEngineUrlSchemeHandler> >’
        251 |     QHash<QByteArray, QPointer<QWebEngineUrlSchemeHandler>> m_customUrlSchemeHandlers;
            |                                                             ^~~~~~~~~~~~~~~~~~~~~~~~~
      In file included from /home/user/qt-build/qtbase/include/QtCore/qcontainerfwd.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/global/qtypeinfo.h:42,
                       from /home/user/qt-build/qtbase/include/QtCore/qtypeinfo.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/global/qglobal.h:1472,
                       from /home/user/qt-build/qtbase/include/QtCore/qglobal.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/tools/qsharedpointer.h:43,
                       from /home/user/qt-build/qtbase/include/QtCore/qsharedpointer.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/QSharedPointer:1,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.h:54,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.cpp:44:
      /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/tools/qcontainerfwd.h:51:43: note: declaration of ‘class QHash<QByteArray, QPointer<QWebEngineUrlSchemeHandler> >’
         51 | template <typename Key, typename T> class QHash;
            |                                           ^~~~~
      In file included from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter_client.h:56,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.h:63,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.cpp:44:
      /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/profile_adapter.h:252:65: error: field ‘m_ephemeralNotifications’ has incomplete type ‘QHash<QByteArray, QWeakPointer<QtWebEngineCore::UserNotificationController> >’
        252 |     QHash<QByteArray, QWeakPointer<UserNotificationController>> m_ephemeralNotifications;
            |                                                                 ^~~~~~~~~~~~~~~~~~~~~~~~
      In file included from /home/user/qt-build/qtbase/include/QtCore/qcontainerfwd.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/global/qtypeinfo.h:42,
                       from /home/user/qt-build/qtbase/include/QtCore/qtypeinfo.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/global/qglobal.h:1472,
                       from /home/user/qt-build/qtbase/include/QtCore/qglobal.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/tools/qsharedpointer.h:43,
                       from /home/user/qt-build/qtbase/include/QtCore/qsharedpointer.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/QSharedPointer:1,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.h:54,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.cpp:44:
      /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/tools/qcontainerfwd.h:51:43: note: declaration of ‘class QHash<QByteArray, QWeakPointer<QtWebEngineCore::UserNotificationController> >’
         51 | template <typename Key, typename T> class QHash;
            |                                           ^~~~~
      In file included from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter_client.h:56,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.h:63,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.cpp:44:
      /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/profile_adapter.h:253:67: error: field ‘m_persistentNotifications’ has incomplete type ‘QHash<QByteArray, QSharedPointer<QtWebEngineCore::UserNotificationController> >’
        253 |     QHash<QByteArray, QSharedPointer<UserNotificationController>> m_persistentNotifications;
            |                                                                   ^~~~~~~~~~~~~~~~~~~~~~~~~
      In file included from /home/user/qt-build/qtbase/include/QtCore/qcontainerfwd.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/global/qtypeinfo.h:42,
                       from /home/user/qt-build/qtbase/include/QtCore/qtypeinfo.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/global/qglobal.h:1472,
                       from /home/user/qt-build/qtbase/include/QtCore/qglobal.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/tools/qsharedpointer.h:43,
                       from /home/user/qt-build/qtbase/include/QtCore/qsharedpointer.h:1,
                       from /home/user/qt-build/qtbase/include/QtCore/QSharedPointer:1,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.h:54,
                       from /home/user/qt-everywhere-src-6.3.1/qtwebengine/src/core/web_contents_adapter.cpp:44:
      /home/user/qt-build/qtbase/include/QtCore/../../../../qt-everywhere-src-6.3.1/qtbase/src/corelib/tools/qcontainerfwd.h:51:43: note: declaration of ‘class QHash<QByteArray, QSharedPointer<QtWebEngineCore::UserNotificationController> >’
         51 | template <typename Key, typename T> class QHash;
            |                                           ^~~~~
      ninja: build stopped: subcommand failed.
      FAILED: qtwebengine/src/core/Release/x86_64/QtWebEngineCore.stamp qtwebengine/src/core/Release/x86_64/QtWebEngineCore /home/user/qt-build/qtwebengine/src/core/Release/x86_64/QtWebEngineCore.stamp /home/user/qt-build/qtwebengine/src/core/Release/x86_64/QtWebEngineCore 
      cd /home/user/qt-build/qtwebengine/src/core && /usr/bin/ninja -C /home/user/qt-build/qtwebengine/src/core/Release/x86_64 QtWebEngineCore
      ninja: build stopped: subcommand failed
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            kev Kirill V
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes