Clean up includes in profile_adapter

Fixes: QTBUG-106241
Change-Id: If345d774651b801362da67ff9d3f80867662b29d
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 67a59057b107ed8bea4db818538f4d30b793a90e)
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>